Merge: ~Add back hovered blue underlined URLs

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -141,6 +141,8 @@ BEGIN
     CONTROL         "Enable",IDC_CHECK_CLICKABLELINK_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,15,140,10
     CONTROL         "No underline",IDC_CHECK_CLICKABLELINK_NOUNDERLINE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,28,140,10
+
+	CONTROL         "Enable fullbox mode",IDC_CHECK_CLICKABLELINK_FULLBOXMODE, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,41,140,10
     COMBOBOX        IDC_COMBO_FILEUPDATECHOICE,267,60,140,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Update silently",IDC_CHECK_UPDATESILENTLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,76,140,10
     CONTROL         "Scroll to the last line after update",IDC_CHECK_UPDATEGOTOEOF,
