Implement: Directory Drop Filter

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -141,8 +141,8 @@ BEGIN
     CONTROL         "Enable",IDC_CHECK_CLICKABLELINK_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,15,140,10
     CONTROL         "No underline",IDC_CHECK_CLICKABLELINK_NOUNDERLINE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,28,140,10
-
-	CONTROL         "Enable fullbox mode",IDC_CHECK_CLICKABLELINK_FULLBOXMODE, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,41,140,10
+    CONTROL         "Enable fullbox mode",IDC_CHECK_CLICKABLELINK_FULLBOXMODE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,41,140,10
     COMBOBOX        IDC_COMBO_FILEUPDATECHOICE,267,60,140,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Update silently",IDC_CHECK_UPDATESILENTLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,76,140,10
     CONTROL         "Scroll to the last line after update",IDC_CHECK_UPDATEGOTOEOF,
@@ -167,7 +167,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,25,350,10
     CONTROL         "Find dialog remains open after search that outputs to results window",IDC_CHECK_FINDDLG_ALWAYS_VISIBLE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,40,350,10
-	CONTROL         "Confirm Replace All in All Opened Documents",IDC_CHECK_CONFIRMREPLOPENDOCS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP,37,55,350,10
+    CONTROL         "Confirm Replace All in All Opened Documents",IDC_CHECK_CONFIRMREPLOPENDOCS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,55,350,10
 END
 
 IDD_PREFERENCE_NEWDOCSETTING_BOX DIALOGEX 0, 0, 455, 198
@@ -198,18 +199,23 @@ IDD_PREFERENCE_DEFAULTDIRECTORY_BOX DIALOGEX 0, 0, 455, 209
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Default Directory (Open/Save)",IDC_OPENSAVEDIR_GR_STATIC,36,26,329,101,BS_CENTER
+    GROUPBOX        "Default Directory (Open/Save)",IDC_OPENSAVEDIR_GR_STATIC,36,0,346,96,BS_CENTER
     CONTROL         "Follow current document",IDC_OPENSAVEDIR_FOLLOWCURRENT_RADIO,
-                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,66,46,200,14
+                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,66,20,200,14
     CONTROL         "Remember last used directory",IDC_OPENSAVEDIR_REMEMBERLAST_RADIO,
-                    "Button",BS_AUTORADIOBUTTON,66,69,217,16
-    CONTROL         "",IDC_OPENSAVEDIR_ALWAYSON_RADIO,"Button",BS_AUTORADIOBUTTON,66,98,11,10
-    EDITTEXT        IDC_OPENSAVEDIR_ALWAYSON_EDIT,80,96,223,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDD_OPENSAVEDIR_ALWAYSON_BROWSE_BUTTON,306,95,41,14
-    CONTROL         "Use new style dialog (without Unix style path capacity)",IDC_OPENSAVEDIR_CHECK_USENEWSTYLESAVEDIALOG,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,139,445,22
-    CONTROL         "Open all files of folder instead of launching Folder as Workspace on folder dropping",IDC_OPENSAVEDIR_CHECK_DRROPFOLDEROPENFILES,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,161,438,31
+                    "Button",BS_AUTORADIOBUTTON,66,43,217,16
+    CONTROL         "",IDC_OPENSAVEDIR_ALWAYSON_RADIO,"Button",BS_AUTORADIOBUTTON,66,72,11,10
+    EDITTEXT        IDC_OPENSAVEDIR_ALWAYSON_EDIT,80,70,223,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDD_OPENSAVEDIR_ALWAYSON_BROWSE_BUTTON,306,69,41,14
+    CONTROL         "New style for file-picker dialog",IDC_OPENSAVEDIR_CHECK_USENEWSTYLESAVEDIALOG,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,35,183,213,22
+    CONTROL         "Open all files instead of Folder as Workspace",IDC_OPENSAVEDIR_CHECK_DRROPFOLDEROPENFILES,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,57,113,321,19
+    GROUPBOX        "Drag And Open",IDC_OPENSAVEDIR_GR_STATIC2,35,100,348,82,BS_CENTER
+    CONTROL         "Filters:",IDC_OPENSAVEDIR_CHECK_DROPOPENFILTER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,57,136,55,22
+    COMBOBOX        IDDROPFILTER,114,141,233,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    CONTROL         "Recursively",IDC_OPENSAVEDIR_CHECK_DROPOPENRECURSE,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,57,161,113,17
 END
 
 IDD_PREFERENCE_RECENTFILESHISTORY_BOX DIALOGEX 0, 0, 455, 210
