--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -161,14 +161,16 @@ IDD_PREFERENCE_SEARCHINGSETTINGS_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "Don't fill find field in Find dialog with selected word",IDC_CHECK_STOPFILLINGFINDFIELD,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,10,350,10
-    CONTROL         "Use Monospaced font in Find dialog (Need to restart Notepad++)",IDC_CHECK_MONOSPACEDFONT_FINDDLG,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,25,350,10
-    CONTROL         "Find dialog remains open after search that outputs to results window",IDC_CHECK_FINDDLG_ALWAYS_VISIBLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,40,350,10
-    CONTROL         "Confirm Replace All in All Opened Documents",IDC_CHECK_CONFIRMREPLOPENDOCS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,55,350,10
+    GROUPBOX        "Find Field",IDC_GROUP_FINDFIELD_STATIC,70,20,249,86,BS_CENTER
+    CONTROL         "Fetch selected word",IDC_CHECK_STOPFILLINGFINDFIELD,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,33,224,10
+    CONTROL         "Fetch nearby word",IDC_CHECK_FILLCARETFINDFIELD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,51,225,10
+    CONTROL         "Monospaced font",IDC_CHECK_MONOSPACEDFONT_FINDDLG,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,69,229,10
+    CONTROL         "Enlarged font",IDC_CHECK_ENLARGED_FINDDLG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,87,228,10
+    CONTROL         "Remains open",IDC_CHECK_FINDDLG_ALWAYS_VISIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,117,350,10
+    CONTROL         "Confirm Replace All",IDC_CHECK_CONFIRMREPLOPENDOCS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,85,139,350,10
 END
 
 IDD_PREFERENCE_NEWDOCSETTING_BOX DIALOGEX 0, 0, 455, 198
@@ -666,6 +668,11 @@ BEGIN
 END
 
 IDD_PREFERENCE_DELIMITERSETTINGS_BOX AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PREFERENCE_SEARCHINGSETTINGS_BOX AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
