Textrument ! ( Added runtime shell registration support. )
Better admin mode :

Merge Npp.pr.2683 [PowerEditor\src\winmain.cpp](PowerEditor\src\winmain.cpp) ( 文件拖拽 0x0049 )

Fix Npp.issue.3477 [PowerEditor\src\NppBigSwitch.cpp](PowerEditor\src\NppBigSwitch.cpp) ( 后台唤醒 )

Fix Npp.issue.8800 [PowerEditor\src\NppIO.cpp](PowerEditor\src\NppIO.cpp) ( 关闭文档列表 )

解决原Notepad++不能：
不能在管理员模式下拖拽打开文件
不能在管理员模式下后台右键打开文件
不能在管理员模式下后台双击打开文件

添加了初始图标，告别蜥蜴人。

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -36,14 +36,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "Don HO don.h@free.fr"
-            VALUE "FileDescription", "Notepad++ : a free (GNU) source code editor"
-            VALUE "FileVersion", "7.89"
-            VALUE "InternalName", "npp.exe"
-            VALUE "LegalCopyright", "Copyleft 1998-2016 by Don HO"
-            VALUE "OriginalFilename", "Notepad++.exe"
-            VALUE "ProductName", "Notepad++"
-            VALUE "ProductVersion", "7.89"
+            VALUE "CompanyName", "knziha@gmail.com"
+            VALUE "FileDescription", "Textrument : a free (GNU) text editor"
+            VALUE "FileVersion", "v0.1.1"
+            VALUE "InternalName", "n1pd.exe"
+            VALUE "LegalCopyright", "Copymiddle 1998-2020 by knziha"
+            VALUE "OriginalFilename", "Textrument.exe"
+            VALUE "ProductName", "Textrument"
+            VALUE "ProductVersion", "v0.1.1"
         END
     END
 END
