Add Menu( Toolbar Customization、Tabbar Wrapping )、Prepare Patch_v2

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -71,7 +71,7 @@ BEGIN
     CONTROL         "Hide menu bar (use Alt or F10 key to toggle)",IDC_CHECK_HIDEMENUBAR,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,193,185,218,20
     CONTROL         "Show status bar",IDC_CHECK_SHOWSTATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,28,171,130,12
-    CONTROL         "Show Big Fonts",IDC_CHECK_SHOWBIGGERFONTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,28,189,130,12
+    CONTROL         "Show big font",IDC_CHECK_SHOWBIGGERFONTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,28,189,130,12
 END
 
 IDD_PREFERENCE_MARGEIN_BOX DIALOGEX 0, 0, 455, 209
