--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1056,7 +1056,6 @@ BEGIN
     BEGIN
         MENUITEM "Preferences...",              IDM_SETTING_PREFERENCE
         MENUITEM "Style Configurator...",       IDM_LANGSTYLE_CONFIG_DLG
-        MENUITEM "Shortcut Mapper...",          IDM_SETTING_SHORTCUT_MAPPER
         MENUITEM SEPARATOR
         POPUP "Import"
         BEGIN
@@ -1064,12 +1063,16 @@ BEGIN
             MENUITEM "Import style theme(s)...",    IDM_SETTING_IMPORTSTYLETHEMS
         END
 
+		MENUITEM "Big Icons",          IDM_SETTING_BIGICON   
 		MENUITEM "Small Icons",        IDM_SETTING_SMALLICON
-		MENUITEM "Big Icons",          IDM_SETTING_BIGICON  
-		MENUITEM "Standard Icons",     IDM_SETTING_STANDARDICON  
+		MENUITEM "Standard Icons",     IDM_SETTING_STANDARDICON 
+		MENUITEM "Customize Toolbar",  IDM_SETTING_CUSTTOOLS
+		MENUITEM "Wrap Toolbar",	   IDM_SETTING_WRAPTOOLS  
+		MENUITEM "Multi-line Tabs",	   IDM_SETTING_WRAPTABS  
 
         MENUITEM SEPARATOR
         MENUITEM "Edit Popup ContextMenu",      IDM_SETTING_EDITCONTEXTMENU
+		MENUITEM "Shortcut Mapper...",          IDM_SETTING_SHORTCUT_MAPPER
     END
     POPUP "T&ools"
     BEGIN
