prune( remove *.bak )

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #-------------------------------------------------------------------------------
 # VisualStudio
 
-bin
+**/bin/
 秘籍
 build_x64
 boost_*
