Tweak ( Shell Icon )

--- a/PowerEditor/src/tools/NppShell/project/NppShell.vcxproj
+++ b/PowerEditor/src/tools/NppShell/project/NppShell.vcxproj
@@ -155,7 +155,7 @@
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <PrecompiledHeader />
       <WarningLevel>Level4</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
