fix: Shell register

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -18,6 +18,8 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "Please exit Notepad++ and relaunch Notepad++ in Administrator mode to use this feature.",IDC_ADMINMUSTBEONMSG_STATIC,16,0,300,34
+    LTEXT           "Register Context Menu...",IDC_REGISTER_STATIC,16,9,152,21
+    LTEXT           "Unregister",IDC_UNREGISTER_STATIC,218,9,125,25
     CONTROL         "Supported extensions:",IDC_SUPPORTEDEXTS_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,14,23,187,14
     LISTBOX         IDC_REGEXT_LANG_LIST,16,40,100,146,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     LISTBOX         IDC_REGEXT_LANGEXT_LIST,121,41,80,145,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
