--- a/PowerEditor/src/WinControls/DockingWnd/DockingGUIWidget.rc
+++ b/PowerEditor/src/WinControls/DockingWnd/DockingGUIWidget.rc
@@ -30,9 +30,9 @@
 #include "dockingResource.h"
 
 IDD_CONTAINER_DLG DIALOGEX 0, 0, 186, 103
-STYLE DS_SETFONT | DS_SETFOREGROUND | WS_MAXIMIZEBOX | WS_POPUP | 
+STYLE DS_SETFONT | DS_SETFOREGROUND | WS_MAXIMIZEBOX | WS_MINIMIZEBOX | WS_POPUP | 
     WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-EXSTYLE WS_EX_TOOLWINDOW
+EXSTYLE 
 CAPTION "Selected Tab"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
