--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -156,9 +156,15 @@ IDI_REDO_DISABLE_ICON   ICON                    "icons/redo_dis.ico"
 
 IDI_SAVED_ICON          ICON                    "icons/saved.ico"
 
+IDI_SAVED_ALT_ICON          ICON                    "icons/saved_alt.ico"
+
 IDI_UNSAVED_ICON        ICON                    "icons/unsaved.ico"
 
+IDI_UNSAVED_ALT_ICON        ICON                    "icons/unsaved_alt.ico"
+
 IDI_READONLY_ICON       ICON                    "icons/readonly.ico"
+
+IDI_READONLY_ALT_ICON       ICON                    "icons/readonly_alt.ico"
 
 IDI_MONITORING_ICON     ICON                    "icons/monitoring.ico"
 
