--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -55,21 +55,22 @@ BEGIN
     GROUPBOX        "Document List Panel",IDC_DOCSWITCH_GB_STATIC,28,121,161,42,BS_CENTER
     CONTROL         "Show",IDC_CHECK_DOCSWITCH,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,35,131,135,10
     CONTROL         "Extension column",IDC_CHECK_DOCSWITCH_EXTCOLUMN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,35,146,137,13
-    GROUPBOX        "Tab Bar",IDC_TABBAR_GB_STATIC,207,6,176,167,BS_CENTER
+    GROUPBOX        "Tab Bar",IDC_TABBAR_GB_STATIC,207,6,176,171,BS_CENTER
     CONTROL         "Hide",IDC_CHECK_TAB_HIDE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,15,108,10
     CONTROL         "Multi-line",IDC_CHECK_TAB_MULTILINE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,30,134,10
     CONTROL         "Vertical",IDC_CHECK_TAB_VERTICAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,44,134,10
     CONTROL         "Reduce",IDC_CHECK_REDUCE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,58,108,11
-    CONTROL         "Lock (no drag and drop)",IDC_CHECK_LOCK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,73,134,12
-    CONTROL         "Darken inactive tabs",IDC_CHECK_DRAWINACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,88,134,12
+    CONTROL         "Alternate icons",IDC_CHECK_TAB_ALTICONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,71,164,10
+    CONTROL         "Lock (no drag and drop)",IDC_CHECK_LOCK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,83,134,12
+    CONTROL         "Darken inactive tabs",IDC_CHECK_DRAWINACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,98,134,12
     CONTROL         "Draw a coloured bar on active tab",IDC_CHECK_ORANGE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,104,137,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,114,137,11
     CONTROL         "Show close button on each tab",IDC_CHECK_ENABLETABCLOSE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,119,133,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,129,133,10
     CONTROL         "Double click to close document",IDC_CHECK_DBCLICK2CLOSE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,134,133,13
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,144,133,13
     CONTROL         "Exit on close the last tab",IDC_CHECK_TAB_LAST_EXIT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,149,165,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,213,159,165,14
     CONTROL         "Hide menu bar (use Alt or F10 key to toggle)",IDC_CHECK_HIDEMENUBAR,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,193,185,218,20
     CONTROL         "Show status bar",IDC_CHECK_SHOWSTATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,28,171,130,12
