--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -132,13 +132,15 @@ BEGIN
     CONTROL         "Peek on tab",IDC_CHECK_ENABLEDOCPEEKER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,70,140,12
     CONTROL         "Peek on document map",IDC_CHECK_ENABLEDOCPEEKONMAP,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,45,85,140,20
+    CONTROL         "Set Save-AS extension to .*",IDC_CHECK_SAVEDLGEXTFILTALLTYPES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,141,233,10
     CONTROL         "Autodetect character encoding",IDC_CHECK_DETECTENCODING,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,128,217,10
-    CONTROL         "Minimize to system tray",IDC_CHECK_MIN2SYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,148,217,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,123,217,10
+    CONTROL         "Minimize to system tray",IDC_CHECK_MIN2SYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,37,159,217,10
     CONTROL         "Show only filename in title bar",IDC_CHECK_SHORTTITLE,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,163,217,20
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,170,217,20
     CONTROL         "Enable Notepad++ auto-updater",IDC_CHECK_AUTOUPDATE,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | NOT WS_VISIBLE | WS_TABSTOP,37,180,217,8
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | NOT WS_VISIBLE | WS_TABSTOP,37,184,217,8
     CONTROL         "Use DirectWrite (May improve rendering special characters, need to restart Notepad++)",IDC_CHECK_DIRECTWRITE_ENABLE,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,187,377,20
     CONTROL         "Enable",IDC_CHECK_CLICKABLELINK_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,15,140,10
