Merge: Split functionList.xml into multifile in "functionList" Folder, p1
https://github.com/notepad-plus-plus/notepad-plus-plus/commit/c0c070abaf6c8acfac3fe91c777a50b537b240c6

22 Oct 2020

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ PowerEditor/bin/backup/
 PowerEditor/bin/localization/
 PowerEditor/bin/plugins/
 PowerEditor/bin/updater/
+PowerEditor/bin/functionList/
 PowerEditor/bin64/
 PowerEditor/bin/themes/
 PowerEditor/installer/bin/wingup/
