Prepare scintilla updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-#-------------------------------------------------------------------------------
-# VisualStudio
- 
+Updates
+
 **/bin/
 秘籍
 build_x64
