Merge: Replaced UCS-2 by UTF-16, removed unused UniConversion.*
https://github.com/notepad-plus-plus/notepad-plus-plus/commit/6834d796ab553438827fe7e07a1e4caef8460f6f

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -193,8 +193,8 @@ BEGIN
     CONTROL         "Apply to opened ANSI files",IDC_CHECK_OPENANSIASUTF8,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,69,171,12
     CONTROL         "UTF-8 with BOM",IDC_RADIO_UTF8,"Button",BS_AUTORADIOBUTTON,222,84,182,14
-    CONTROL         "UCS-2 Big Endian with BOM",IDC_RADIO_UCS2BIG,"Button",BS_AUTORADIOBUTTON,222,102,181,14
-    CONTROL         "UCS-2 Little Endian with BOM",IDC_RADIO_UCS2SMALL,
+    CONTROL         "UTF-16 Big Endian with BOM",IDC_RADIO_UCS2BIG,"Button",BS_AUTORADIOBUTTON,222,102,181,14
+    CONTROL         "UTF-16 Little Endian with BOM",IDC_RADIO_UCS2SMALL,
                     "Button",BS_AUTORADIOBUTTON,222,118,182,16
     CONTROL         "",IDC_RADIO_OTHERCP,"Button",BS_AUTORADIOBUTTON,222,142,10,10
     COMBOBOX        IDC_COMBO_OTHERCP,236,141,120,140,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
