--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -558,6 +558,14 @@ BEGIN
         MENUITEM "Select All Between Matching Braces", IDM_SEARCH_SELECTMATCHINGBRACES
         MENUITEM "Mar&k...",                    IDM_SEARCH_MARK
         MENUITEM SEPARATOR
+        POPUP "Mark One"
+            BEGIN
+            MENUITEM "Using 1st Style",    IDM_SEARCH_MARKONEEXT1
+            MENUITEM "Using 2nd Style",    IDM_SEARCH_MARKONEEXT2
+            MENUITEM "Using 3rd Style",    IDM_SEARCH_MARKONEEXT3
+            MENUITEM "Using 4th Style",    IDM_SEARCH_MARKONEEXT4
+            MENUITEM "Using 5th Style",    IDM_SEARCH_MARKONEEXT5
+        END
         POPUP "Mark All"
         BEGIN
             MENUITEM "Using 1st Style",             IDM_SEARCH_MARKALLEXT1
