Add menu( Vertical Tabs ), fix vertical mouse scroll of tabs

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1100,6 +1100,7 @@ BEGIN
 		MENUITEM "Standard Icons",     IDM_SETTING_STANDARDICON 
 		MENUITEM "Customize Toolbar",  IDM_SETTING_CUSTTOOLS
 		MENUITEM "Wrap Toolbar",	   IDM_SETTING_WRAPTOOLS  
+		MENUITEM "Vertical  Tabs",	   IDM_SETTING_VERTTABS  
 		MENUITEM "Multi-line Tabs",	   IDM_SETTING_WRAPTABS  
 
         MENUITEM SEPARATOR
