Enhance Plugin Admin: Embed List JSON, Measure Load TIme.

--- a/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
+++ b/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
@@ -33,6 +33,8 @@
 #define IDC_STATIC -1
 #endif
 
+IDR_PLUGINLISTJSONFILE TEXTFILE PLJSON
+
 IDD_PLUGINSADMIN_DLG DIALOGEX 36, 44, 500, 380
 STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
@@ -56,4 +58,5 @@ BEGIN
 	//PUSHBUTTON      "Close", IDCANCEL,332,270,57,14
     //PUSHBUTTON      "Settings",IDC_PLUGINADM_SETTINGS_BUTTON,255,270,69,14
 END
+
 
