--- a/PowerEditor/visual.net/Textrument.vcxproj.filters
+++ b/PowerEditor/visual.net/Textrument.vcxproj.filters
@@ -35,7 +35,6 @@
     <ClCompile Include="..\src\WinControls\FunctionList\functionListPanel.cpp" />
     <ClCompile Include="..\src\WinControls\FunctionList\functionParser.cpp" />
     <ClCompile Include="..\src\ScintillaComponent\GoToLineDlg.cpp" />
-    <ClCompile Include="..\src\WinControls\DockingWnd\Gripper.cpp" />
     <ClCompile Include="..\src\MISC\PluginsManager\IDAllocator.cpp" />
     <ClCompile Include="..\src\WinControls\ImageListSet\ImageListSet.cpp" />
     <ClCompile Include="..\src\uchardet\JpCntx.cpp" />
@@ -148,6 +147,9 @@
     <ClCompile Include="..\src\WinControls\DockingWnd\DockingSplitter.cpp">
       <Filter>Docking</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\WinControls\DockingWnd\Gripper.cpp">
+      <Filter>Docking</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\clipboardFormats.h" />
@@ -206,7 +208,6 @@
     <ClInclude Include="..\src\WinControls\FunctionList\functionListPanel_rc.h" />
     <ClInclude Include="..\src\WinControls\FunctionList\functionParser.h" />
     <ClInclude Include="..\src\ScintillaComponent\GoToLineDlg.h" />
-    <ClInclude Include="..\src\WinControls\DockingWnd\Gripper.h" />
     <ClInclude Include="..\src\MISC\PluginsManager\IDAllocator.h" />
     <ClInclude Include="..\src\WinControls\ImageListSet\ImageListSet.h" />
     <ClInclude Include="..\src\uchardet\JpCntx.h" />
@@ -340,6 +341,9 @@
       <Filter>Docking</Filter>
     </ClInclude>
     <ClInclude Include="..\src\WinControls\DockingWnd\DockingSplitter.h">
+      <Filter>Docking</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\WinControls\DockingWnd\Gripper.h">
       <Filter>Docking</Filter>
     </ClInclude>
   </ItemGroup>
